syntax = "proto3";

package location_services.geolocation;

import "shared/common.proto";
import "shared/location.proto";

service GeolocationService {
  rpc VendorLocations (VendorLocationRequest) returns (VendorLocationResponse) {}
}

// Vendor Location Operations


message VendorLocationRequest {
    shared.location.Location ne = 1;
    shared.location.Location sw = 2;
}

message VendorLocationResponse {
    repeated VendorLocation vendors = 1;
}

message VendorLocation {
    string vendorId = 1;
    shared.location.Location coordinates = 2;
}

// Note: Location and Empty messages now come from shared proto files 